feat: make video size limits configurable via environment variables
- Add configurable video size limits in MB (SHORT_VIDEO_MAX_MB, MEDIUM_VIDEO_MAX_MB, LONG_VIDEO_MIN_MB)
- Convert MB to bytes internally for easier configuration
- Remove hardcoded video size limits from VideoMessage entity
- Update forward_message to send videos without captions
- Fix abstract method implementation in MessageRepository
- Update README and .env.example with new environment variables
- Improve logging to show both MB and bytes values
- Add send_reply method for better user feedback during long video downloads

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ LOG_LEVEL=INFO
 VIDEO_INPUT_GROUP_ID=-1001234567890
 DESTINATION_CHAT_ID=@destination_chat
 VIDEOS_DIR=videos
+
+# Video size limits in MB (optional - defaults provided)
+SHORT_VIDEO_MAX_MB=50
+MEDIUM_VIDEO_MAX_MB=500
+LONG_VIDEO_MIN_MB=500
