--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   peque_bot:
     build: .
@@ -7,5 +5,6 @@ services:
     env_file:
       - .env
     volumes:
-      - ./videos:/app/videos
+      - ${VIDEOS_DIR}:/app/videos
+      - ./logs:/app/logs
     restart: unless-stopped
